--- a/extensions/resmo/package.json
+++ b/extensions/resmo/package.json
@@ -41,9 +41,11 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.44.0",
-    "@raycast/utils": "^1.4.8"
+    "@raycast/utils": "^1.4.8",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.190",
     "@types/node": "18.8.3",
     "@types/react": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
